--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,2 +1,3 @@
+@import url("http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300");
 @import "foundation_and_overrides";
 @import "base";
