--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,5 @@
 ---
+title: "Ben Stafford - experienced web developer."
 pageable: true
 ---
 <div class="articles">
@@ -11,8 +12,8 @@ pageable: true
 </div>
 
 <%= partial '/blog/pagination', :locals => {
-  :paginate => paginate, 
-  :next_page => next_page, 
+  :paginate => paginate,
+  :next_page => next_page,
   :prev_page => prev_page,
   :num_pages => num_pages,
   :page_number => page_number
