--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
     <meta http-equiv="cleartype" content="on">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title><%= data.page.title || "My Blog" %></title>
+    <title><%= current_resource.data.title || "Ben Stafford" %></title>
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css" />
     <%= stylesheet_link_tag "application" %>
@@ -36,31 +36,53 @@
   <body>
 
     <!-- Logo & Top Nav -->
-    <div class="row">
-      <div class="small-3 columns">
-        <h1><%= link_to image_tag('http://placehold.it/250x75&text=My+Blog'), '/' %></h1>
+    <header>
+      <div class="row">
+        <div class="small-12 columns">
+          <a href="/">
+            <h1 style="margin-bottom: 5px;">Ben Stafford</h1>
+            <h5 style="margin-bottom: 0px;">Random notes, thoughts and musings on technology, programming, and other jobs as assigned</h5>
+          </a>
+        </div>
       </div>
-      <div class="small-9 columns">
-        <ul class="link-list right">
-        </ul>
-      </div>
-    </div>
+      <div style="border-bottom:2px solid #000; width: 100%; height: 2px;"></div>
+    </header>
     <!-- End Header and Nav -->
 
     <!-- Main page container -->
     <div class="row">
-      <div class="small-12 columns">
+      <div class="small-9 columns">
         <%= yield %>
+      </div>
+      <div class="small-3 columns sidebar">
+        <aside>
+          <ul class="side-nav">
+            <li><%= link_to "Home", "/index.html" %></li>
+            <li><%= link_to "About Me", "/about.html" %></li>
+          </ul>
+        </aside>
+
+        <aside>
+          Recent Posts
+          <br />
+          <ul class="side-nav">
+            <% blog.articles[0...5].each do |article| %>
+              <li><a href="<%= article.url %>"><%= article.title %></a></li>
+            <% end %>
+          </ul>
+        </aside>
+
+        <aside>
+          <a width="250px" class="twitter-timeline" href="https://twitter.com/benstafford" data-widget-id="427242911902601216">Tweets by @benstafford</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </aside>
       </div>
     </div>
 
     <!-- Footer -->
     <footer class="row">
       <div class="small-12 large-6 columns">
-        <p>&copy; Copyright <%= Date.today.year.to_s %> My Blog</p>
-      </div>
-      <div class="small-12 large-6 columns">
-        <p class="right"><i class="icon-heart"></i> <%= link_to 'Gimme some love.', 'http://github.com/mattolson' %></p>
+        <p>&copy; Copyright <%= Date.today.year.to_s %> Ben Stafford</p>
       </div>
     </footer>
 
@@ -69,7 +91,7 @@
       <div id="ie-warning">
         <h1>Did you know that your copy of Internet Explorer is terribly out of date?</h1>
         <p>
-          To get the best possible experience using our website, we recommend that you upgrade to the latest version or use another web browser. 
+          To get the best possible experience using our website, we recommend that you upgrade to the latest version or use another web browser.
           Any of the following will provide a superior experience, not only on this site, but across the web.
         </p>
         <p>Just click one of the icons below to get to the download page.</p>
@@ -125,8 +147,7 @@
         $(document).foundation();
       });
 
-      // TODO: Set your Google Analytics code here
-      var _gaq=[['_setAccount','UA-'],['_trackPageview']];
+      var _gaq=[['_setAccount','UA-36350543-1'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
 
